# serializer version: 1
# name: test_navigate_aboutBlank_checkEvents
  list([
    dict({
      'id': 'stable_0',
      'result': dict({
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'success',
    }),
    dict({
      'method': 'browsingContext.domContentLoaded',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.load',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.navigationStarted',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
  ])
# ---
# name: test_navigate_dataUrl_checkEvents
  list([
    dict({
      'id': 'stable_0',
      'result': dict({
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'success',
    }),
    dict({
      'method': 'browsingContext.domContentLoaded',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.load',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.navigationStarted',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.beforeRequestSent',
      'params': dict({
        'context': 'stable_3',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_5',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.responseCompleted',
      'params': dict({
        'context': 'stable_3',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_5',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.responseStarted',
      'params': dict({
        'context': 'stable_3',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_5',
      }),
      'type': 'event',
    }),
  ])
# ---
# name: test_navigate_scriptFragmentRedirect_checkEvents
  list([
    dict({
      'id': 'stable_0',
      'result': dict({
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'success',
    }),
    dict({
      'method': 'browsingContext.domContentLoaded',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.fragmentNavigated',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_4',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.load',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.navigationStarted',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_5',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.beforeRequestSent',
      'params': dict({
        'context': 'stable_3',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_7',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.responseCompleted',
      'params': dict({
        'context': 'stable_3',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_7',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.responseStarted',
      'params': dict({
        'context': 'stable_3',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_8',
      }),
      'type': 'event',
    }),
  ])
# ---
# name: test_navigate_scriptRedirect_checkEvents
  list([
    dict({
      'error': 'unknown error',
      'id': 'stable_0',
      'type': 'error',
    }),
    dict({
      'method': 'browsingContext.domContentLoaded',
      'params': dict({
        'context': 'stable_1',
        'navigation': 'stable_2',
        'url': 'stable_3',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.load',
      'params': dict({
        'context': 'stable_1',
        'navigation': 'stable_2',
        'url': 'stable_3',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.navigationAborted',
      'params': dict({
        'context': 'stable_1',
        'navigation': 'stable_4',
        'url': 'stable_5',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.navigationStarted',
      'params': dict({
        'context': 'stable_1',
        'navigation': 'stable_4',
        'url': 'stable_5',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.navigationStarted',
      'params': dict({
        'context': 'stable_1',
        'navigation': 'stable_2',
        'url': 'stable_3',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.beforeRequestSent',
      'params': dict({
        'context': 'stable_1',
        'isBlocked': False,
        'navigation': 'stable_4',
        'redirectCount': 0,
        'request': 'stable_7',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.beforeRequestSent',
      'params': dict({
        'context': 'stable_1',
        'isBlocked': False,
        'navigation': 'stable_2',
        'redirectCount': 0,
        'request': 'stable_9',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.responseCompleted',
      'params': dict({
        'context': 'stable_1',
        'isBlocked': False,
        'navigation': 'stable_4',
        'redirectCount': 0,
        'request': 'stable_10',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.responseCompleted',
      'params': dict({
        'context': 'stable_1',
        'isBlocked': False,
        'navigation': 'stable_2',
        'redirectCount': 0,
        'request': 'stable_9',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.responseStarted',
      'params': dict({
        'context': 'stable_1',
        'isBlocked': False,
        'navigation': 'stable_4',
        'redirectCount': 0,
        'request': 'stable_10',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.responseStarted',
      'params': dict({
        'context': 'stable_1',
        'isBlocked': False,
        'navigation': 'stable_2',
        'redirectCount': 0,
        'request': 'stable_11',
      }),
      'type': 'event',
    }),
  ])
# ---
# name: test_nested_navigate_scriptFragmentRedirect_checkEvents
  list([
    dict({
      'id': 'stable_0',
      'result': dict({
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'success',
    }),
    dict({
      'method': 'browsingContext.domContentLoaded',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.fragmentNavigated',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_4',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.load',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.navigationStarted',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_5',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.beforeRequestSent',
      'params': dict({
        'context': 'stable_3',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_7',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.responseCompleted',
      'params': dict({
        'context': 'stable_3',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_7',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.responseStarted',
      'params': dict({
        'context': 'stable_3',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_8',
      }),
      'type': 'event',
    }),
  ])
# ---
# name: test_scriptNavigate_aboutBlank_checkEvents
  list([
    dict({
      'id': 'stable_0',
      'result': dict({
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'success',
    }),
    dict({
      'method': 'browsingContext.domContentLoaded',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.load',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_2',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'browsingContext.navigationStarted',
      'params': dict({
        'context': 'stable_3',
        'navigation': 'stable_1',
        'url': 'stable_4',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.beforeRequestSent',
      'params': dict({
        'context': 'stable_3',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_6',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.responseCompleted',
      'params': dict({
        'context': 'stable_3',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_6',
      }),
      'type': 'event',
    }),
    dict({
      'method': 'network.responseStarted',
      'params': dict({
        'context': 'stable_3',
        'isBlocked': False,
        'navigation': 'stable_1',
        'redirectCount': 0,
        'request': 'stable_7',
      }),
      'type': 'event',
    }),
  ])
# ---
